Fixed: wflow-consoleweb - Userview Theme - Menu counter not aligned with text when menu label too long. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview8.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview8.css
@@ -331,6 +331,10 @@ body:not(.horizontal_menu) #navigation {
     background: var(--theme-sidebar-active-link-bg, transparent) !important;
     opacity: 1 !important;
 }
+#sidebar .nav > li > ul > li > a > span:first-child {
+    max-width: 160px;
+    display: inline-block;
+}
 #sidebar li a.dropdown:after {
     position: absolute;
     top: 50%;
